<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStartWithNavigation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btNegative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/app_name"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close" />

            <TextView
                style="@style/fontBold"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/margin_16"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/send_suggestions"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="@dimen/toolbarTitleSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btNegative"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <ImageView
                android:id="@+id/btPositive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/app_name"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_send" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@android:color/transparent"
            android:hint="@string/put_your_email"
            android:padding="@dimen/margin_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/separator" />

        <EditText
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/write_your_suggestion_or_comment"
            android:padding="@dimen/margin_16" />
    </LinearLayout>

</LinearLayout>


